use string-argv parser to split command

--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
                 "1.0.0": "consumeTreeView"
             }
         }
+    },
+    "dependencies": {
+        "string-argv": "^0.3.1"
     }
 }
